force-app/main/default/objects/Client_List__c/Client_List__c.object-meta.xml
<CustomObject>
    <label>Client List</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>