force-app/main/default/objects/Client_List__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client List</relationshipLabel>
    <relationshipName>Client_List1</relationshipName>
    <type>Lookup</type>
</CustomField>