force-app/main/default/objects/Client_List__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>First and Last Name of the subscriber</description>
    <label>Agent Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>