force-app/main/default/objects/Client_List__c/fields/Agent_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Office_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insert the Office ID as the related location of the Agent Subscriber ID</description>
    <label>Agent Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client List</relationshipLabel>
    <relationshipName>Client_List</relationshipName>
    <type>Lookup</type>
</CustomField>