force-app/main/default/objects/Client_List__c/fields/Agent_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_Subscription_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Subscription ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Client List</relationshipLabel>
    <relationshipName>Client_List</relationshipName>
    <type>Lookup</type>
</CustomField>