force-app/main/default/objects/Client_List__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Date field for whent the Broker Authorization form was submitted to Bright MLS</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>