force-app/main/default/objects/Client_List__c/fields/Last_A_P_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_A_P_Review_Date__c</fullName>
    <description>Date field that indicates the last Accuracy and Policy department reviewed this site&apos;s URL</description>
    <label>Last A&amp;P Review Date</label>
    <type>Date</type>
</CustomField>