force-app/main/default/objects/Client_List__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Not Started - received request for review
In Progress - request is under review 
Approved - request approved trigger billing charges for this vendor to subscriber 
Denied - request denied no billing has been set up 
Cancelled by subscriber - triggers billing to end
Cancelled by vendor -triggers billing to end 
Subscriber Suspended - subscriber&apos;s subscription is inactivated due to non payment of outstanding balance - anything under $25 outstanding balance is not eligible for suspension. 
Reinstated - start billing again for the next term</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Cancelled by subscriber</fullName>
            </value>
            <value>
                <fullName>Cancelled by vendor</fullName>
            </value>
            <value>
                <fullName>Subscriber Suspended</fullName>
            </value>
            <value>
                <fullName>Reinstated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>