force-app/main/default/objects/Client_List__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL provided from the Broker Authorization Form</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>