force-app/main/default/objects/Client_List__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Active Vendors 
vendor should have the type of service of either IDX or VOW</description>
    <label>Vendor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDX</fullName>
            </value>
            <value>
                <fullName>VOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>